# non_markovian_qubit_swap

./: Idea_1.ipynb  Idea_2.ipynb  Idea_3.ipynb  README.md  article_graphs_1.ipynb  aux_funs.py  czkm_app.npz  czkm_app2.npz  czkm_app3.npz  czkm_app4.npz  czkm_qst.npz  czmk_opt_from_stirap.npz  experiment_0.py  experiment_1.py  experiment_2.py  experiment_3.py  experiment_4.py  experiment_5.py  experiment_6.py  experiment_7py.py  experiment_two_qubits.py  expperiment_renormalization.py  expt_002_cache.npz  expt_008_cache1.npz  expt_008_cache11.npz  expt_008_cache111.npz  expt_008_cache11_nodelay.npz  expt_008_cache2.npz  expt_008_cache3.npz  expt_008_cache4.npz  expt_009_renormalized_WW_fidelity.npz  expt_sets.py  hello.py  pyproject.toml  renormalization_plots.ipynb  stirap_qst.npz  swap_qst.npz  two_qubit_control.py
experiments/: Idea_1.ipynb
src/logistics/: bosons.py  multiphoton_ww.py  tools.py  ww.py
