[project]
name = "non-markovian-qubit-swap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "numpy>=2.3.5",
    "qemulator",
    "scipy>=1.16.3",
]

[tool.uv.sources]
qemulator = { git = "https://git.csic.es/waveguide-qed/dde-emulator.git" }
